# k6parser

./: .gitignore  Cargo.toml  Justfile  README.md
src/: k6.rs  main.rs  template.html
