[package]
name = "k6parser"
version = "0.1.0"
edition = "2021"
authors = ["Sakti Dwi Cahyono <me@saktidwicahyono.name>"]

readme = "README.md"

license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
flate2 = "1.0.25"
quantogram = "0.4.4"
